Profile[Change Password]

--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -90,7 +90,8 @@
             android:longClickable="false"
             android:maxLength="12"
             android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
-            android:maxLines="1" />
+            android:maxLines="1"
+            />
 
     </com.google.android.material.textfield.TextInputLayout>
         </LinearLayout>
