--- a/app/src/main/res/layout/activity_user_details.xml
+++ b/app/src/main/res/layout/activity_user_details.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical"
         android:paddingStart="@dimen/_21sdp"
         android:paddingTop="@dimen/_45sdp"
-        android:paddingBottom="@dimen/_12sdp">
+        android:layout_marginBottom="@dimen/_11sdp">
 
         <LinearLayout
             android:id="@+id/userDetailsCloseLL"
@@ -32,18 +32,17 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/_14sdp"
-            android:layout_marginBottom="@dimen/_10sdp"
             android:fontFamily="@font/opensans_bold"
             android:text="User Details"
             android:textColor="@color/primary_black"
-            android:textSize="@dimen/_16ssp" />
+            android:textSize="@dimen/_16ssp"
+            android:layout_marginBottom="@dimen/_11sdp"/>
 
     </LinearLayout>
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginBottom="@dimen/_11sdp"
         android:layout_marginStart="@dimen/_11sdp"
         android:layout_marginEnd="@dimen/_11sdp"
