Profile[Change Password]

--- a/app/src/main/res/layout/activity_confirm_password.xml
+++ b/app/src/main/res/layout/activity_confirm_password.xml
@@ -6,6 +6,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:paddingBottom="@dimen/_27sdp"
+    android:background="@color/white"
     android:theme="@style/Theme.MaterialComponents.DayNight.DarkActionBar"
     tools:context=".view.ConfirmPasswordActivity">
     <RelativeLayout
@@ -53,7 +54,7 @@
         android:layout_marginTop="@dimen/_14sdp"
         android:fontFamily="@font/opensans_regular"
         android:lineSpacingExtra="@dimen/_5sdp"
-        android:textSize="@dimen/_13ssp"
+        android:textSize="@dimen/_12ssp"
         android:textColor="@color/primary_black"
         />
 
@@ -69,6 +70,8 @@
         android:textColorHint="@color/black"
         app:boxStrokeColor="@color/primary_green"
         app:errorTextColor="@color/error_red"
+        app:endIconDrawable="@drawable/ic_eyeclose"
+        app:endIconMode="custom"
         app:passwordToggleEnabled="true"
         app:expandedHintEnabled="false"
         app:hintTextColor="@color/primary_green"
@@ -87,6 +90,7 @@
             android:textColorHint="@color/light_gray"
             android:textCursorDrawable="@drawable/cursor_color"
             android:textSize="@dimen/_12ssp"
+
             android:longClickable="false"
             android:maxLength="12"
             android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890!@#$%*?"
