--- a/app/src/main/res/layout/activity_create_password.xml
+++ b/app/src/main/res/layout/activity_create_password.xml
@@ -198,6 +198,7 @@
                         android:imeOptions="actionDone"
                         android:inputType="textPassword"
                         android:maxLength="12"
+                        android:textColorHint="@color/light_gray"
                         android:privateImeOptions="disableSticker=true;disableGifKeyboard=true"
                         android:textColor="@color/text_color"
                         android:textSize="@dimen/_12ssp"
