--- a/app/src/main/res/layout/activity_add_external_bank_acc.xml
+++ b/app/src/main/res/layout/activity_add_external_bank_acc.xml
@@ -7,88 +7,95 @@
     android:orientation="vertical"
     android:padding="@dimen/_21sdp">
 
-     <RelativeLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        >
-         <LinearLayout
-             android:layout_width="match_parent"
-             android:layout_height="wrap_content"
-             android:layout_alignParentTop="true"
-             android:orientation="vertical">
+        android:layout_height="wrap_content">
 
-             <ImageView
-                 android:layout_width="wrap_content"
-                 android:layout_height="@dimen/_13sdp"
-                 android:layout_marginTop="@dimen/_44sdp"
-                 android:layout_marginBottom="@dimen/_13sdp"
-                 android:src="@drawable/ic_chevron_left" />
-
-             <TextView
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:fontFamily="@font/opensans_bold"
-                 android:text="Add External Bank Account"
-                 android:textColor="@color/black"
-                 android:textSize="@dimen/_16ssp" />
-
-             <ImageView
-                 android:layout_width="match_parent"
-                 android:layout_height="wrap_content"
-                 android:layout_marginTop="@dimen/_42sdp"
-                 android:layout_marginBottom="@dimen/_34sdp"
-                 android:src="@drawable/fiserv" />
-
-             <LinearLayout
-                 android:layout_width="wrap_content"
-                 android:layout_height="wrap_content"
-                 android:layout_alignParentTop="true"
-                 android:orientation="vertical">
-
-                 <TextView
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:textColor="@color/black"
-                     android:fontFamily="@font/opensans_regular"
-                     android:text="Coyni uses Fiserv to verify bank account \ninformation. Fiserv may also check you \nbalance(s) to ensure that you have enough \nfunds to cover requested transactions. By \nclicking below you agree to link your bank \naccount."
-                     android:textSize="@dimen/_12ssp" />
-
-                 <TextView
-                     android:layout_width="match_parent"
-                     android:layout_height="wrap_content"
-                     android:text="@string/learn_more"
-                     android:textSize="@dimen/_12ssp"
-                     android:fontFamily="@font/opensans_regular"
-                     android:textColor="#00a6a2" />
-             </LinearLayout>
-         </LinearLayout>
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="vertical"
-        >
-        <androidx.cardview.widget.CardView
-        android:id="@+id/nextCV"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/_43sdp"
-        app:cardBackgroundColor="#00a6a2"
-        android:gravity="center"
-        android:layout_alignParentBottom="true"
-        app:cardCornerRadius="@dimen/_21sdp"
-        >
-        <TextView
-            android:id="@+id/authorTV"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Next"
-            android:textColor="@color/white"
-            android:gravity="center"
-            android:fontFamily="@font/opensans_bold"
-            android:layout_gravity="center"
-            />
-        </androidx.cardview.widget.CardView>
+            android:layout_alignParentTop="true"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/lyExternalClose"
+                android:layout_width="30dp"
+                android:layout_height="30dp"
+                android:layout_marginTop="@dimen/_40sdp"
+                android:gravity="center_vertical"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="wrap_content"
+                    android:layout_height="@dimen/_13sdp"
+                    android:src="@drawable/ic_chevron_left" />
+            </LinearLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_13sdp"
+                android:fontFamily="@font/opensans_bold"
+                android:text="Add External Bank Account"
+                android:textColor="@color/black"
+                android:textSize="@dimen/_16ssp" />
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="@dimen/_42sdp"
+                android:layout_marginBottom="@dimen/_34sdp"
+                android:src="@drawable/fiserv" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentTop="true"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="Coyni uses Fiserv to verify bank account \ninformation. Fiserv may also check you \nbalance(s) to ensure that you have enough \nfunds to cover requested transactions. By \nclicking below you agree to link your bank \naccount."
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/_12ssp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/opensans_regular"
+                    android:text="@string/learn_more"
+                    android:textColor="#00a6a2"
+                    android:textSize="@dimen/_12ssp" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="vertical">
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cvNext"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/_43sdp"
+                android:layout_alignParentBottom="true"
+                android:gravity="center"
+                app:cardBackgroundColor="#00a6a2"
+                app:cardCornerRadius="@dimen/_21sdp">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:fontFamily="@font/opensans_bold"
+                    android:gravity="center"
+                    android:text="Next"
+                    android:textColor="@color/white" />
+            </androidx.cardview.widget.CardView>
 
         </LinearLayout>
-     </RelativeLayout>
+    </RelativeLayout>
 </LinearLayout>
