--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -31,6 +31,6 @@
     <color name="default_red">#FFDD2C00</color>
     <color name="price">#009c98</color>
     <color name="orange">#FFA70F</color>
-
+    <color name="dark_color_bg">#E5E5E5</color>
 
 </resources>
